Add apartments generator
