# src/schemas/createApartmentsSchema.ts
@@ -1,10 +1,7 @@
-import Joi from "joi";
+import Joi from 'joi';
 
-// Define the schema to validate the floor_plan_id
 export const createApartmentsSchema = Joi.object({
-  floor_plan_id: Joi.number().integer().required().messages({
-    "number.base": '"floor_plan_id" must be a number',
-    "number.integer": '"floor_plan_id" must be an integer',
-    "any.required": '"floor_plan_id" is required',
-  }),
+  floor_plan_id: Joi.number().integer().required().description('The ID of the floor plan'),
+  building_id: Joi.number().integer().required().description('The ID of the building for the apartments'),
+  name: Joi.string().required().description('The name or label for the floor (e.g., "First Floor", "Penthouse")')
 });
